--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "bcr_car-management-api",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "index.js",
   "scripts": {
     "start": "bin/www",
     "develop": "nodemon -q bin/www",
@@ -18,6 +18,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "morgan": "^1.10.0",
+    "nodemon": "^2.0.20",
     "pg": "^8.8.0",
     "sequelize": "^6.25.0",
     "sequelize-cli": "^6.5.1"
