--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
   "author": "Erick Yudha",
   "license": "MIT",
   "dependencies": {
+    "cloudinary": "^1.32.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.20",
     "pg": "^8.8.0",
     "sequelize": "^6.25.0",
