--- a/package.json
+++ b/package.json
@@ -15,14 +15,18 @@
   "author": "Erick Yudha",
   "license": "MIT",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cloudinary": "^1.32.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
-    "nodemon": "^2.0.20",
     "pg": "^8.8.0",
     "sequelize": "^6.25.0",
     "sequelize-cli": "^6.5.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.20"
   }
 }
